Completed simple calculator logic using Dijkstra's Shunting Yard algorithm. Adjusted styling on display for contrast issues.

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ body {
     text-align: left;
     border: none;
     background-color: var(--dark-grey);
+    color: var(--salmon);
 }
 
 #keys {
